deployment.yaml
# bulletinboard-ads-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bulletinboard-ads
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bulletinboard-ads
  template:
    metadata:
      labels:
        app: bulletinboard-ads
    spec:
      containers:
        - name: bulletinboard-ads
          image: cc-ms-k8s-training.common.repositories.cloud.sap/bulletinboard-ads-i516008
          ports:
            - containerPort: 3000
