bulletinboard-ads-service.yaml
# bulletinboard-ads-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bulletinboard-ads
spec:
  selector:
    app: bulletinboard-ads
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
