db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bulletinboard-ads-db
spec:
  selector:
    matchLabels:
      app: bulletinboard-ads-db
  replicas: 1
  template:
    metadata:
      labels:
        app: bulletinboard-ads-db
    spec:
      containers:
        - name: app
          image: postgres:14-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: database
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: bulletinboard-ads-db
spec:
  selector:
    app: bulletinboard-ads-db
  ports:
    - name: db
      port: 5432
      targetPort: 5432
  type: ClusterIP
