bulletinboard-ads-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bulletinboard-ads
spec:
  selector:
    matchLabels:
      app: bulletinboard-ads
  replicas: 1
  template:
    metadata:
      labels:
        app: bulletinboard-ads
    spec:
      containers:
        - name: app
          image: cc-ms-k8s-training.common.repositories.cloud.sap/bulletinboard-ads-i516008
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: bulletinboard-ads
spec:
  selector:
    app: bulletinboard-ads
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: bulletinboard-ads
spec:
  rules:
    - host: bulletinboard-ads.c-00a2462.kyma.ondemand.com
      http:
        paths:
        - backend:
            service:
              name: bulletinboard-ads
              port:
                number: 3000
          path: /
          pathType: Prefix
  tls:
    - hosts:
      - bulletinboard-ads.c-00a2462.kyma.ondemand.com
      secretName: kyma-gateway-certs
